# PPE_Detection_TensorRT

./: README.md
01_system_design/: performance_budget.md  pipeline_proposal.md
02_quantization_benchmark/: benchmark_notebook.ipynb  narasi_teknis.md
02_quantization_benchmark/results/: benchmark_table.csv  layer_analysis.md  response_api_prototype_colab.json
03_api_prototype/: README.md  pyproject.toml
03_api_prototype/src/: main.py
03_api_prototype/src/models/: ppe_models.py
03_api_prototype/src/routes/: employees.py  violations.py
03_api_prototype/tests/: test_api.py
